--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <h1>Keerthana G</h1>
         <p>II ECE Student | Sri Krisha College of Engineering & Technology</p>
     </header>
-            <nav>
-                <div class="container">
-                <ul>
-                    <li><a href="#About">About Me</a></li>
-                    <li><a href="#Education">Educational Qualifications</a></li>
-                    <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#Workshop">Workshops</a></li>
-                    <li><a href="Intern & Hackathon">Internships & Hackathons</a></li>
-                    <li><a href="#Contact">Contact Me</a></li>
-                </ul>
-                </div>
-            </nav>
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="#About">About Me</a></li>
+                <li><a href="#Education">Educational Qualifications</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Workshop">Workshops</a></li>
+                <li><a href="Intern & Hackathon">Internships & Hackathons</a></li>
+                <li><a href="#Contact">Contact Me</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <section id="About" class="section">
         <div class="container">
@@ -99,9 +99,10 @@
     <section id="Contact" class="section">
         <div class="container">
             <h3>Contact Me</h3>
-                <p>For more enquiries:</p>
-                <p>Email: keerthanagobinath2006@gmail.com</p>
-                <p>Call : 9876543210</p>
+            <p>For more enquiries:</p>
+            <p>Email: keerthanagobinath2006@gmail.com</p>
+            <p>Call : 9876543210</p>
+            <p>LinkedIn : <a href="https://www.linkedin.com/in/keerthana-g-1a51a62a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"> My profile</a></p>
         </div>
     </section>
 
