--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <p>Email: keerthanagobinath2006@gmail.com</p>
             <p>Call : 9876543210</p>
             <p>LinkedIn : <a href="https://www.linkedin.com/in/keerthana-g-1a51a62a1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"> My profile</a></p>
+            <p>Github : <a href="https://github.com/Keerthanagobinath/newportfolio">View page</a></p>
         </div>
     </section>
 
